style.css
/* ... */
@media (max-width: 690px) {
  .max-width {
    padding: 0 23px;
  }
  .home .home-content .text-2 {
    font-size: 60px;
  }
  .home .home-content .text-3 {
    font-size: 32px;
  }
}

@media (max-width: 589px) {
  .blogs .carousel .card {
    text-align: center;
  }
  .blogs .carousel .card .box {
    align-items: center;
  }
  .blogs .carousel .card .separate-bar {
    margin: 20px;
  }
}

@media (max-width: 500px) {
  .home .home-content .text-2 {
    font-size: 50px;
  }
  .home .home-content .text-3 {
    font-size: 27px;
  }
  .about .button a {
    font-size: 16px;
    padding: 10px 25px;
  }
  .portfolio .port-content .card {
    width: 100%;
  }
}

/* CURVE styling */
body {
  overflow-x: hidden;
}
/* These sections are affected by curve */
section.about {
  padding-bottom: 200px;
}
section.portfolio,
section.blogs {
  padding: 200px 0;
}
.curve,
.curve-flipped {
  position: absolute;
  height: 200px;
  width: 100%;
  bottom: 0;
}
.curve::before,
.curve-flipped::after {
  content: "";
  display: block;
  position: absolute;
  border-radius: 100% 50%;
  width: 55%;
  height: 100%;
  background-color: #252934;
}
.curve::after,
.curve-flipped::before {
  content: "";
  display: block;
  position: absolute;
  border-radius: 100% 50%;
  width: 55%;
  height: 100%;
  z-index: 1;
  background-color: #fff;
}
.curve::before,
.curve-flipped::before {
  transform: translate(85%, 60%);
}
.curve::after,
.curve-flipped::after {
  transform: translate(-4%, 40%);
}

/* add curve ontop of contact header */
.blogs.contact-curve .carousel {
  /* Add extra margin-bottom to avoid the curve */
  margin-bottom: 100px;
}
.blogs.contact-curve::after {
  content: "";
  border-top-left-radius: 60% 100%;
  border-top-right-radius: 60% 100%;
  position: absolute;
  height: 25%;
  width: 100%;
  background-color: #252934;
  z-index: -1;
}
.contact.contact-curve {
  /* Make contact part reach to the top of the section */
  padding-top: 0;
  /* For navigation, prevent navigation bar overlap the title */
  scroll-margin-top: 200px;
}

@media (max-width: 950px) {
  section.about {
    padding-bottom: 150px;
  }
  section.portfolio {
    padding: 150px 0;
  }
  section.blogs {
    padding: 150px 0 70px 0;
  }
  .curve,
  .curve-flipped {
    height: 150px;
  }
}

@media (max-width: 690px) {
  section.about {
    padding-bottom: 100px;
  }
  section.portfolio {
    padding: 100px 0;
  }
  section.blogs {
    padding-top: 100px;
  }
  .curve,
  .curve-flipped {
    height: 100px;
  }
}

